# ai-fishing-forecast

./: .env.example  .gitignore  AI.md  AI_DESIGN_GUIDELINES.md  C:\Users\kenta\iCloudDrive\iCloud~md~obsidian\Obsidian_iCloud\爆釣カレンダー_レビュー結果_2026-02-27.md  CLAUDE.md  GEMINI.md  Gemini.md  README.md  create_prs.sh  ichihara.html  ichihara_dump.txt  package.json  pnpm-lock.yaml  pr_body.txt  pyproject.toml  requirements.txt
data/: casting_choka.json  casting_compact.json  daikoku_2024_to_present.json  honmoku_2024_to_present.json  ichihara_2024_to_present.json  ichihara_2024_to_present.json.bak  isogo_2024_to_present.json  johshuya_history.json  johshuya_history.json.bak
docs/: data_sources.md
fishing-forecast-web/: package.json  pnpm-lock.yaml  tsconfig.app.json
scripts/: clean_johshuya_data.ts  compact_casting.py  fetch_chiba_marine_history.py  fetch_copernicus_forecast.py  fetch_copernicus_marine.py  fetch_mlit_river_data.py  fetch_openmeteo_history.py  generate_tides.py  import_jma_weather.py  import_json_to_db.py  import_marine_env.py  init_db.py  migrate_table_name.py  refine_db_data.py  scrape_casting.js  scrape_casting_full.js  scrape_casting_resume.js  scrape_kanagawa_marine.py  setup_ssh_forwarding.ps1  sync_tbeic_marine_data.py
src/: fetch_history.ts  fetch_ichihara_history.ts  fetch_johshuya_full_history.ts  fetch_johshuya_history.ts  patch_ichihara_march.ts  scraper.ts  scraper_ichihara_detail.ts  scraper_ichihara_list.ts  scraper_johshuya.ts  test_ichihara.ts  test_ichihara_list.ts  test_johshuya.ts
tests/: test_dataset_d.py  test_generate_calendar.py  (+2 more)
(+63 files in other folders)
